--- a/package.json
+++ b/package.json
@@ -7,8 +7,23 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@discordapp/twemoji": "^14.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/pluginutils": "^5.0.2",
     "@syuilo/aiscript": "^0.12.2",
+    "broadcast-channel": "^4.20.2",
+    "eventemitter3": "^5.0.0",
+    "js-yaml": "^4.1.0",
+    "json5": "^2.2.3",
+    "mfm-js": "^0.23.3",
+    "misskey-js": "^0.0.14",
+    "path": "^0.12.7",
     "prismjs": "^1.24.1",
+    "punycode": "^2.3.0",
+    "rollup": "^3.11.0",
+    "sass": "^1.57.1",
+    "throttle-debounce": "^5.0.0",
+    "tinycolor2": "^1.5.2",
     "vue": "^3.0.5",
     "vue-prism-editor": "^2.0.0-alpha.2"
   },
