--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eventemitter3": "^5.0.0",
     "js-yaml": "^4.1.0",
     "json5": "^2.2.3",
+    "lodash": "^4.17.21",
     "mfm-js": "^0.23.3",
     "misskey-js": "^0.0.14",
     "path": "^0.12.7",
