--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,17 +19,17 @@ jobs:
         with:
           node-version: 20.x
 
-      - name: AiScript Cache dependencies
+      - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: ~/.npm
           key: npm-${{ hashFiles('package-lock.json') }}
           restore-keys: npm-
 
-      - name: AiScript Install dependencies
+      - name: Install dependencies
         run: npm ci
 
-      - name: AiScript Build
+      - name: Build
         run: npm run build
 
       - name: Deploy
