--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "vue-prism-editor": "^2.0.0-alpha.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.38.0",
+    "@types/node": "^20.6.2",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
     "vite": "^2.4.4"
