--- a/.github/workflows/fetch-misskey.yml
+++ b/.github/workflows/fetch-misskey.yml
@@ -14,27 +14,31 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.0.0
 
-      - name: mkdir
-        run: |
-          mkdir -p fetch/misskey
-
       - name: clone
         working-directory: ./fetch/misskey
         run: |
+          rm -rf ./{*,.*}
           git init
           git config core.sparsecheckout true
           git remote add origin https://github.com/misskey-dev/misskey.git
           cp ../../files-misskey ./.git/info/sparse-checkout
           git pull origin develop
           rm -rf .git
-          mkdir -p ../../fetched
-          find . -type f -exec cp {} ../../fetched \;
+
+      - name: Branch name
+        id: git-branch-name
+        uses: EthanSK/git-branch-name-action@v1
 
       - name: pr
         run: |
           git config --global user.email "none"
           git config --global user.name "bot"
           git switch -c fetch
-          git add fetched
+          git add src
           git commit -m'fetch misskey'
           git push -u origin fetch
+
+      - name: Create Pull Request
+        continue-on-error: true
+        run: |
+          gh pr create --fill -B "${GIT_BRANCH_NAME}"
