--- a/.github/workflows/fetch-misskey.yml
+++ b/.github/workflows/fetch-misskey.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4.0.0
 
       - name: clone
-        working-directory: ./fetch/misskey
+        working-directory: src/misskey
         run: |
           rm -rf ./{*,.*}
           git init
