--- a/.github/workflows/fetch-misskey.yml
+++ b/.github/workflows/fetch-misskey.yml
@@ -33,14 +33,22 @@ jobs:
         id: git-branch-name
         uses: EthanSK/git-branch-name-action@v1
 
-      - name: Create branch
+      - name: Prepare Git
         run: |
           git config --global user.email "none"
           git config --global user.name "bot"
+
+      - name: Create fetch branch
           git switch -c fetch
-          git add src
+          git add src/misskey/packages
           git commit -m'fetch misskey'
           git push -f -u origin fetch
+
+      - name: Create fetch-locales branch
+          git switch -c fetch-locales "${GIT_BRANCH_NAME}"
+          git add src/misskey/locales
+          git commit -m'fetch misskey-locales'
+          git push -f -u origin fetch-locales
 
       - name: Create Pull Request
         continue-on-error: true
